--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2115,7 +2115,7 @@ img.sidebar-icon {
     float: left;
     font-family: 'Open Sans', serif;
     font-size: 14px;
-    font-weight: normal;
+    font-weight: bold;
     left: 15px;
     padding: 0 5px 2px;
     position: relative;
